--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="/light.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="/dark.png" media="(prefers-color-scheme: dark)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>星源</title>
+    <link rel="stylesheet" href="/github.min.css">
+    <title>星源的 Blog</title>
+    <base target="_self">
   </head>
   <body>
-    <div id="app" style="padding-top: 50px;"></div>
+    <div id="app" style="padding-top: 60px;"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
