--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/light.png" media="(prefers-color-scheme: light)">
     <link rel="icon" href="/dark.png" media="(prefers-color-scheme: dark)">
+    <link rel="stylesheet" href="/src/assets/github.min.css" media="(prefers-color-scheme: light)">
+    <link rel="stylesheet" href="/src/assets/github-dark.min.css" media="(prefers-color-scheme: dark)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>星源的 Blog</title>
     <base target="_self">
