--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="/src/assets/github-dark.min.css" media="(prefers-color-scheme: dark)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base target="_self">
+
   </head>
   <body>
     <div id="app" style="padding-top: 60px;"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="/live2d/autoload.js"></script>
   </body>
 </html>
